# docs/swagger.json
@@ -186,7 +186,7 @@
         },
         "/readiness": {
             "get": {
-                "description": "Indica que o serviço está pronto para receber tráfego",
+                "description": "Indica que o serviço está pronto para receber tráfego (banco de dados acessível)",
                 "produces": [
                     "application/json"
                 ],
@@ -199,6 +199,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/internal_infra_http_handlers.HealthyResponse"
+                        }
+                    },
+                    "503": {
+                        "description": "Banco de dados indisponível",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_diegodesousas_greeter_internal_infra_http.DefaultResponse"
                         }
                     }
                 }
